2011-05-30  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_env/pam_env.c (_pam_parse): Implement debug option.
	Based on patch by Tomas Mraz.

2011-05-24  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_listfile/pam_listfile.c (pam_sm_authenticate): quiet
	option has no argument, print no missing file if quiet is set
	[sf#3194930].

2011-05-04  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_lastlog/pam_lastlog.c (last_login_failed): Don't
	abort with error if btmp file does not exist.

2011-03-21  Tomas Mraz  <tm@t8m.info>

	* modules/pam_unix/md5.c (MD5Final): Clear the whole ctx.

2011-03-18  Tomas Mraz  <tm@t8m.info>

	* modules/pam_namespace/md5.c (MD5Final): Clear the whole ctx.
	* modules/pam_namespace/pam_namespace.c (del_polydir): Guard for NULL poly.
	(protect_dir): Guard for -1 passing to close().
	(ns_setup): Likewise.
	(pam_sm_open_session): Correctly test for SELinux enabled flag.

2011-03-17  Tomas Mraz  <tm@t8m.info>

	* modules/pam_selinux/pam_selinux.c (config_context): Fix leak of type.
	(manual_context): Likewise.
	(context_from_env): Remove extraneous auditing in success case.

	* modules/pam_unix/support.c (_unix_run_helper_binary): Remove extra
	close() call.

2011-02-22  Tomas Mraz  <tm@t8m.info>

	* modules/pam_nologin/pam_nologin.8.xml: Add missing space.
	* modules/pam_limits/limits.conf.5.xml: Fix typo.

2010-12-21  Tomas Mraz  <tm@t8m.info>

	* modules/pam_selinux/pam_selinux.c (mls_range_allowed): Unhardcode
	values for security class and av permission bit.

2010-12-14  Tomas Mraz  <tm@t8m.info>

	* modules/pam_limits/pam_limits.c (parse_uid_range): New function
	to parse the range of uids or gids.
	(parse_config_file): Call parse_uid_range() and if uid/gid range
	is identified, setup the limits if the range matches. New parameters
	containing user's uid and primary gid.
	(pam_sm_open_session): Pass the user's uid and primary gid to
	parse_config_file().
	* modules/pam_limits/limits.conf.5.xml: Document the uid/gid ranges.
