@@ -684,7 +684,7 @@ struct pam_module _pam_timestamp_modstruct = {
 int
 main(int argc, char **argv)
 {
-	int i, pretval = -1, retval = 0, dflag = 0, kflag = 0;
+	int i, retval = 0, dflag = 0, kflag = 0;
 	const char *target_user = NULL, *user = NULL, *tty = NULL;
 	struct passwd *pwd;
 	struct timeval tv;
@@ -826,7 +826,6 @@ main(int argc, char **argv)
 			select(STDOUT_FILENO + 1,
 			       NULL, NULL, &write_fds,
 			       &tv);
-			pretval = retval;
 			retval = 0;
 		}
 	} while (dflag > 0);
